<resources>
    <string name="app_name">贝米钱包</string>
    <string name="login_success">登录成功</string>
    <string name="login">登录</string>
    <string name="Username">用户名</string>
    <string name="Password">密码</string>
    <string name="forgot_your_password">忘记密码 ?</string>
    <string name="go">登录</string>
    <string name="repeat_password">请再次输入密码</string>
    <string name="next">注册</string>
    <string name="register">注册</string>
</resources>